bug fixes, beginning download status bar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,3 +65,10 @@ td {
 .fas {
     font-size: 35px;
 }
+
+#content {
+    margin: 0 auto;
+    width: 400px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
