--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,3 +72,28 @@ td {
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+input:focus {
+    outline:none;
+}
+
+/* Progress Stuff */
+#progress {
+    width: 100%;
+    height: 25px;
+    margin-top: 83px
+}
+
+#progress-bar {
+    width: 250px;
+    height: 100%;
+    background: #f98241;
+}
+
+#progress p {
+    color: white;
+    font-family: system-u;
+    padding: 5px;
+    text-align: left;
+    text-transform: uppercase
+}
