--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,22 +78,22 @@ input:focus {
 }
 
 /* Progress Stuff */
-#progress {
+#progress-bar {
     width: 100%;
     height: 25px;
     margin-top: 83px
 }
 
-#progress-bar {
-    width: 250px;
+#progress {
+    width: 0%;
     height: 100%;
     background: #f98241;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #progress p {
     color: white;
-    font-family: system-u;
+    font-family: system-ui;
     padding: 5px;
     text-align: left;
-    text-transform: uppercase
 }
