--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,7 +35,7 @@ input::-webkit-input-placeholder {
 input[type="text"] {
     border: none;
     width: 80%;
-    height: 40px;
+    height: 20px;
     text-align:center;
     margin: 10%;
     font: 300 22px/1.7 'Open Sans', sans-serif;
@@ -67,18 +67,18 @@ input:focus {
 /* Progress Stuff */
 #progress-bar {
     width: 100%;
-    height: 60px;
     margin-top: 48px
 }
 
 #progress {
     width: 0%;
+    padding: 3% 0px;
     height: 100%;
     background: #f98241;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-#progress li {
+#progress p {
     display: inline;
     color: #39434e;
     font-family: system-ui;
