--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 h1 {
     margin: 0;
+    font-weight: 500;
     letter-spacing: 1px;
     font: 300 23px/1.7 'Open Sans', sans-serif;
 }
@@ -24,12 +25,14 @@ h5 {
 }
 
 .header {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background: #39434e;
     color: #f0f5f7;
     font: 300 'Open Sans', sans-serif;
     text-align: center;
     z-index: 10;
-    padding: 25px;
+    padding: 30px;
+    border-radius: 40px 40px 0 0;
 }
 section {
   margin: 0 auto;
@@ -39,8 +42,7 @@ section {
 }
 .content {
     text-align: center;
-    background-color: white;
-    padding: 30px;
+    margin: 30px;
 }
 input::-webkit-input-placeholder {
     padding: 0 10px;
@@ -49,6 +51,7 @@ input::-webkit-input-placeholder {
 }
 
 button {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #f98241;
     color: white;
     margin: 0 auto;
@@ -56,16 +59,22 @@ button {
     border: none;
     font-size: 1em;
     padding: 25px;
-    width: 400px;
+    width: 96%;
+    margin: 2%;
+    border-radius: 40px;
+
 }
 
 .main-content {
+    /* padding:4px; */
     margin-top: 100px !important;
     margin: 0 auto;
     width: 400px;
     left: 0;
     right: 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 40px;
+    background-color: white;
 }
 
 /* Input Stying */
@@ -83,6 +92,7 @@ input:focus {
     width: 0%;
     padding: 3% 0px;
     height: 100%;
+    border-radius: 0 20px 20px 0;
     background: #f98241;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -146,10 +156,6 @@ label
 }
 
 
-td {
-    padding: 20px 0px 30px 0px;
-}
-
 /*Settings Icon*/
 
 #settings-btn {
@@ -167,16 +173,16 @@ td {
     font-size: 20px;
 }
 
-/* Settings Stuff 
+/* Settings Stuff  */
 .settings {
     display: none;
-}*/
+}
 .settings-overlay {
     top: 0;
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 50;
+    z-index: 9;
     background-color: rgb(57,67,78);
     opacity: .75;
     display: block;
@@ -186,7 +192,7 @@ td {
     position: absolute;
     top: 0;
     background: white;
-    z-index: 50;
+    z-index: 9;
     opacity: 1;
     height: 550px;
 }
@@ -195,6 +201,10 @@ td {
     text-align: left;
     overflow: scroll;
     height: 470px;
+    margin: 0 auto;
+    padding: 0px 6% 3% 6%;
+    border-radius: 40px
+
 }
 
 .btn-abs {
@@ -303,13 +313,18 @@ td {
 
 .settings .main-content {
     margin-top: 30px !important;
+    height: inherit
 }
 
 /* Scrollbar Settings */
 
 ::-webkit-scrollbar {
+    margin-right: -3%;
     width: 5px;
   }
 ::-webkit-scrollbar-thumb {
     background: #39434e !important
+}
+::-webkit-scrollbar-corner {
+    display: none;
 }
